@@ -1,0 +1,5 @@
+*.aux
+*.log
+*.html
+*.dvi
+*.tmp
