@@ -1,0 +1,33 @@
+% $Id$
+% A few common TeX definitions for literate sources.  Not installed in runtime.
+% 
+% Copyright 1996--2009 Eitan M. Gurari
+% Copyright 2009, 2010 TeX Users Group.
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either
+% version 1.3c of this license or (at your option) any
+% later version. The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions
+% of LaTeX version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status "maintained".
+%
+% The Current Maintainer of this work
+% is the TeX4ht Project <http://tug.org/tex4ht>.
+% 
+% If you modify this program, changing the 
+% version identification would be appreciated.
+
+\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
+\edef\temp{\the\tmpcnt}
+\multiply\tmpcnt  -60 \advance\tmpcnt  \time
+
+\edef\version{\the\year-\ifnum \month<10 0\fi
+  \the\month-\ifnum \day<10 0\fi\the\day
+   -\ifnum \temp<10 0\fi \temp
+   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
+
+% #1 is the first year for Eitan.  The last year is always 2009.  RIP.
+\def\CopyYear.#1.{#1--2009}
